note word wrap fix

--- a/src/app/public/search/components/chunk/chunk-note-item/chunk-note-item.component.scss
+++ b/src/app/public/search/components/chunk/chunk-note-item/chunk-note-item.component.scss
@@ -1,3 +1,7 @@
 .note-title {
     font-style: italic;
 }
+
+.note-value {
+    word-break: break-word;
+}
